@@ -1,3 +1,6 @@
+2011-12-02  Kirit Saelensminde  <kirit@felspar.com>
+ The authentication back end now copies across the attribute values and resets them on the local user each time the user is fetched from the backend.
+
 2011-11-29  Kirit Saelensminde  <kirit@felspar.com>
  Added HTTP caching that can be controlled on a per-model basis.
  The POST method in the connector user agent now also creates a new Http object for each request.
